--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ project(CMakeSandbox LANGUAGES CXX)
 set(XRN_CXX_VERSION 23)
 
 # dependencies
-set(XRN_PERSONAL_DEPENDENCIES xrnLog) # include other xrn projects
+set(XRN_PERSONAL_DEPENDENCIES xrnLog xrnMeta xrnUtil) # include other xrn projects
 set(XRN_LIBRARIES_REQUIRED spdlog/1.10.0)
 set(XRN_LIBRARIES_REQUIREMENTS spdlog fmt) # find_package
 set(XRN_LIBRARIES_DEPENDENCIES CONAN_PKG::spdlog CONAN_PKG::fmt) # target_link_libraries
@@ -24,6 +24,7 @@ set(SPDLOG_BUILD_TESTS OFF)
 set(XRN_TOOLCHAIN_DIR "${CMAKE_SOURCE_DIR}/.toolchain")
 set(XRN_TOOLCHAIN_DETAILS_DIR "${XRN_TOOLCHAIN_DIR}/.details")
 set(XRN_SOURCES_DIR "sources")
+set(XRN_EXTERNALS_DIR "externals")
 set(XRN_TESTS_DIR "tests")
 set(XRN_OUTPUT_DIR "binaries")
 
